# word-counter

./: .cliff.toml  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  package.json  tsconfig.json  tsconfig.test.json  tsdown.config.ts
crates/language-detector/: Cargo.toml  LICENSE
crates/language-detector/src/: lib.rs
docs/: batch-jobs-usage-guide.md  breaking-changes-notes.md  config-usage-guide.md  doctor-usage-guide.md  language-detection-research-2026-01-02.md  language-detection-support-guide.md  locale-tag-detection-notes.md  regex-usage-guide.md  release-notes-local-verification.md  research-2026-01-02-language-detection.md  research-2026-01-02-word-counter-options.md  research-2026-01-15-frontmatter-architecture-context.md  research-2026-01-15-frontmatter-counting-modes.md  research-2026-01-16-emoji-symbol-segmentation.md  research-2026-01-21-whitespace-tab-counting.md  research-2026-01-21-workflow-bootstrap-prompts.md  research-2026-02-13-batch-file-counting.md  research-2026-02-13-cli-progress-indicator.md  research-2026-02-13-total-combination-mode.md  research-2026-02-17-filename-regex-matching.md  research-2026-02-17-json-output-schema-contract.md  research-2026-02-18-latin-custom-hints-v2.md  research-2026-02-18-wasm-language-detector-spike.md
examples/: json-braces.md  json-fenced.md  latin-hints.json  manage-huge-logs.mjs  manage-huge-logs.sh  no-frontmatter.md  toml-arrays-of-tables.md  toml-basic.md  toml-tables-inline.md  yaml-basic.md  yaml-content-key.md  yaml-frontmatter-only.md
scripts/: benchmark-batch-jobs.mjs  (+5 more)
src/: bin.ts  (+3 more)
(+405 files in other folders)
